添加号段，城市必填 号码详情页和订单页合并一个页面，仿照得时靓号https://www.dslianghao.com/product/119808.html?channel=weipi_douyin3 gm,mwd2,广州广末两个，修改订单下单from加引号 jinan,jinan2,shop济南三个

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -1543,6 +1543,20 @@
     <Content Include="Content\webApp\lib\plugins\angular-tabSlideBox.js" />
     <Content Include="Content\webApp\templates\model.html" />
     <Content Include="Content\webApp\templates\tabs.html" />
+    <Content Include="css\wap\base.css" />
+    <Content Include="css\wap\create-order.css" />
+    <Content Include="css\wap\pay-order.css" />
+    <Content Include="imgs\alipay.png" />
+    <Content Include="imgs\det_img01.jpg" />
+    <Content Include="imgs\det_img02.jpg" />
+    <Content Include="imgs\det_img03.jpg" />
+    <Content Include="imgs\det_img04.jpg" />
+    <Content Include="imgs\det_img05.jpg" />
+    <Content Include="imgs\det_img06.jpg" />
+    <Content Include="imgs\det_img07.jpg" />
+    <Content Include="imgs\det_img08.jpg" />
+    <Content Include="imgs\loading_c.gif" />
+    <Content Include="imgs\wechatpay.png" />
     <Content Include="Index.htm" />
     <Content Include="MP_verify_TghbgpOlcmiU9e3T.txt" />
     <Content Include="public\static\css\fill.css" />
@@ -2039,6 +2053,11 @@
     <Content Include="Areas\webapp\Views\jinan\JsApi.cshtml" />
     <Content Include="Areas\webapp\Views\jinan\mobileinfo.cshtml" />
     <Content Include="Areas\webapp\Views\jinan\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop\product.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\product.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\product.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\product.cshtml" />
+    <Content Include="Areas\webapp\Views\gm\product.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
