头条推广商城H5靓号库的添加 ClientData去掉缓存organize，department，post，role，userGroup，user

--- a/HZSoft.Application/HZSoft.Application.Busines/HZSoft.Application.Busines.csproj
+++ b/HZSoft.Application/HZSoft.Application.Busines/HZSoft.Application.Busines.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CustomerManage\ReceivableReportBLL.cs" />
     <Compile Include="CustomerManage\SmsInfoBLL.cs" />
     <Compile Include="CustomerManage\TelphoneLiangBLL.cs" />
+    <Compile Include="CustomerManage\TelphoneLiangH5BLL.cs" />
     <Compile Include="CustomerManage\TelphoneLiangJoinBLL.cs" />
     <Compile Include="CustomerManage\TelphoneLiangOtherBLL.cs" />
     <Compile Include="CustomerManage\TelphoneLiangSeeBLL.cs" />
