Entity TelphoneData,liang,liangH5添加品牌Brand Orders添加Remark DataService添加修改品牌信息的关联同步Brand
Service
Orders
entity.OrderSn添加判断，jsapi会提前生成订单编号，直接用提生成的，保持提交微信的一致
liang和liangH5导入添加Brand列赋值

views
修改TelphoneData，省市赋值，添加品牌
orders添加备注

webapp-con
修改点击号码跳转toInfo('{item.TelphoneID}','{host}')
toInfo判断是否是微信内部打开，jsapi页面
修改微信支付回调时间15s，改成6s
添加product和productJsApi页面
修改提交成功的编码，用来区分“什么”提交成功
-views
index添加function toInfo(id, host)，isWeiXin()
重新支付页面还跳转原来的order页面，添加支付宝
合并页product，添加品牌

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -2023,6 +2023,10 @@
     <Content Include="Areas\CustomerManage\Views\TelphoneLiangH5\TelphoneLiangH5Import.cshtml" />
     <Content Include="Areas\CustomerManage\Views\TelphoneLiangH5\TelphoneLiangH5Index.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\productJsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\productJsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\productJsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\productJsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\gm\productJsApi.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
