--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -272,8 +272,9 @@
     <Compile Include="Areas\webapp\Controllers\gmController.cs" />
     <Compile Include="Areas\webapp\Controllers\jinan2Controller.cs" />
     <Compile Include="Areas\webapp\Controllers\jinanController.cs" />
-    <Compile Include="Areas\webapp\Controllers\mwd2Controller.cs" />
+    <Compile Include="Areas\webapp\Controllers\jntt2Controller.cs" />
     <Compile Include="Areas\webapp\Controllers\jnttController.cs" />
+    <Compile Include="Areas\webapp\Controllers\mwd2Controller.cs" />
     <Compile Include="Areas\webapp\Controllers\ShopController.cs" />
     <Compile Include="Areas\webapp\LXAreaRegistration.cs" />
     <Compile Include="Areas\SystemManage\Controllers\AreaController.cs" />
@@ -343,6 +344,24 @@
     <Content Include="Areas\webapp\Views\gm\mobileinfo.cshtml" />
     <Content Include="Areas\webapp\Views\gm\mobileorder.cshtml" />
     <Content Include="Areas\webapp\Views\gm\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\express.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\product.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt2\productJsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\express.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\product.cshtml" />
+    <Content Include="Areas\webapp\Views\jntt\productJsApi.cshtml" />
     <Content Include="Areas\webapp\Views\mwd2\express.cshtml" />
     <Content Include="Areas\webapp\Views\mwd2\Index.cshtml" />
     <Content Include="Areas\webapp\Views\mwd2\info2.cshtml" />
@@ -2028,15 +2047,6 @@
     <Content Include="Areas\webapp\Views\jinan2\productJsApi.cshtml" />
     <Content Include="Areas\webapp\Views\jinan\productJsApi.cshtml" />
     <Content Include="Areas\webapp\Views\gm\productJsApi.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\express.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\Index.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\info2.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\JsApi.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\mobileinfo.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\mobileorder.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\paymentFinish.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\product.cshtml" />
-    <Content Include="Areas\webapp\Views\jntt\productJsApi.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
